workloads/apigateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-service
  labels:
    app: apigateway-service
spec:
  replicas: 1 # DEV: single replica
  selector:
    matchLabels:
      app: apigateway-service
  template:
    metadata:
      labels:
        app: apigateway-service
    spec:
      containers:
        - name: apigateway-service
          image: 65486509/apigateway-service:1.0.32
          imagePullPolicy: Always
          ports:
            - containerPort: 8123
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8123
            failureThreshold: 60
            periodSeconds: 5
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8123
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8123
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
