workloads/apigateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
  labels:
    app.kubernetes.io/name: apigateway-service
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: microbank
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: apigateway-service
  ports:
  - name: http
    port: 80    # Keeping port 80 for abstracting the actual port
    targetPort: 8123
