workloads/apigateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
  labels:
    app.kubernetes.io/name: apigateway-service
    app.kubernetes.io/component: routing
    app.kubernetes.io/part-of: microbank
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: api.microbank.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 80
